Reduce the size of the square slightly, add a new grid button which prompts the user for a number.

--- a/style.css
+++ b/style.css
@@ -3,11 +3,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 20px;
 }
 
 .grid {
-    width: 800px;
-    height: 800px;
+    width: 700px;
+    height: 700px;
     display: flex;
     border: solid;
     flex-wrap: wrap;
